[gd_scene load_steps=7 format=3 uid="uid://cc1m2a1obsyn4"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_0t4e8"]
[ext_resource type="AudioStream" uid="uid://bu4fsd1vwatnw" path="res://Player/Footsteps.wav" id="2_4quni"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7q2bu"]

[sub_resource type="Animation" id="Animation_vxmnh"]
resource_name = "Fade_Out"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Footsteps:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [-30.0, -80.0]
}

[sub_resource type="Animation" id="Animation_yepwn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Footsteps:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b0qw2"]
_data = {
"Fade_Out": SubResource("Animation_vxmnh"),
"RESET": SubResource("Animation_yepwn")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_0t4e8")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_7q2bu")

[node name="Camera" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0.527979, 0)

[node name="Footsteps" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.345621, -0.391482)
stream = ExtResource("2_4quni")
max_db = 0.0

[node name="FootstepsTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
one_shot = true

[node name="AudioHanlderPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_b0qw2")
}

[connection signal="animation_finished" from="AudioHanlderPlayer" to="." method="_on_footsteps_fading_out_animation_finished"]
